# Dev-Janitor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_OPTIMIZATION.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  electron-builder.json5  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: INFOGRAPHIC_PROMPT.md  RELEASE.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build_errors.txt  check_errors.txt  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/ai_cleanup/: mod.rs
src-tauri/src/ai_cli/: mod.rs
src-tauri/src/ai_tools/: mod.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/chat_history/: mod.rs
src-tauri/src/commands/: ai_cleanup.rs  ai_cli.rs  cache.rs  chat_history.rs  config.rs  mod.rs  packages.rs  security.rs  services.rs  tools.rs
src-tauri/src/config/: mod.rs
src-tauri/src/detection/: mod.rs
src-tauri/src/package_manager/: cargo.rs  composer.rs  conda.rs  homebrew.rs  mod.rs  npm.rs  pip.rs
src-tauri/src/security_scan/: definitions.rs  mod.rs  scanner.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: command.rs
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/shared/: ConfirmDialog.tsx
src/components/views/: AiCleanupView.tsx  AiCliView.tsx  CacheView.tsx  ChatHistoryView.tsx  ConfigView.tsx  PackagesView.tsx  PlaceholderViews.tsx  SecurityScanView.tsx  ServicesView.tsx  SettingsView.tsx  ToolsView.tsx  index.ts
src/hooks/: useAutoUpdater.ts
src/i18n/: en.json  index.ts  zh.json
src/ipc/: commands.ts
src/main/: aiAssistant.ts  aiCleanupScanner.ts  autoUpdater.ts  cacheScanner.ts  detectionEngine.test.ts  detectionEngine.ts  environmentScanner.ts  index.ts  ipcHandlers.ts  packageManager.ts  preload.ts  serviceMonitor.ts
src/main/packageDiscovery/: customConfig.test.ts  index.ts  packageDiscovery.test.ts  packageDiscovery.ts  parsingResilience.test.ts  pathCache.test.ts  pathCache.ts  tieredPathSearch.test.ts  tieredPathSearch.ts  types.ts
src/main/packageDiscovery/handlers/: brewHandler.test.ts  brewHandler.ts  condaHandler.test.ts  condaHandler.ts  pipxHandler.test.ts  pipxHandler.ts  poetryHandler.test.ts  poetryHandler.ts  pyenvHandler.test.ts  pyenvHandler.ts
src/main/security/: cspManager.ts
src/renderer/: App.tsx  main.tsx
src/renderer/components/: index.ts
src/renderer/components/AI/: AIAssistantDrawer.tsx  MarkdownErrorBoundary.tsx
src/renderer/components/CacheCleaner/: CacheCleanerView.tsx  index.ts
src/renderer/components/Common/: EmptyState.tsx  ErrorBoundary.tsx  LoadingState.tsx
src/renderer/components/Environment/: EnvironmentView.tsx  PathAnalyzer.tsx
src/renderer/components/Layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/renderer/components/Services/: ServicesView.tsx
src/renderer/components/Settings/: AboutSection.tsx
src/renderer/components/Tools/: ToolCard.tsx  ToolDetailModal.tsx  ToolsView.tsx
src/renderer/i18n/locales/: en-US.json  zh-CN.json
src/renderer/store/: index.ts
src/shared/types/: index.ts  packageManagerConfig.ts
src/store/: index.ts
src/styles/: index.css  variables.css
